--- a/conf/application.ini
+++ b/conf/application.ini
@@ -3,7 +3,7 @@
 application.directory 	= APP_PATH "/application"
 application.dispatcher.catchException 	= TRUE
 application.bootstrap	= APP_PATH "/application/Bootstrap.php"
-application.modules		= "index,manager"
+application.modules		= "index"
 application.view.ext	= "html"
 
 ; database
